# auth-microservice

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2024_09_18_1646-4e3400c99f0b_init_migration_users_table.py
src/app/application/api/: app.py
src/app/application/api/v1/: router.py
src/app/application/api/v1/handlers/: auth.py
src/app/common/settings/: config.py
src/app/domain/users/: schemas.py
src/app/infra/models/: __init__.py  base.py  users.py
src/app/infra/repositories/: base.py  db.py  users.py
src/app/infra/repositories/exceptions/: base.py  users.py
src/app/logic/: containers.py
src/app/logic/usecases/: users.py
