[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["vyacheslavi <vyach.karepov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standart"], version = "^0.114.0"}
jwt = "^1.3.1"
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.0"
dependency-injector = "^4.42.0"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.9.2"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.8.0"
rich = "^13.8.1"
black = "^24.8.0"

[tool.isort]

multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2

src_paths = ["src"]

skip_glob = [".git", ".idea", ".vscode", "venv", ".venv"]

known_fastapi = ["fastapi*"]
known_sqlalchemy = ["sqlalchemy"]
known_first_party = ["src"]

sections = ["FUTURE", "STDLIB", "FASTAPI", "SQLALCHEMY", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
